--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,13 @@ body {
 	color: #222;
 }
 
+.xbox_nav a {
+	color:#E6E6E6;
+	text-decoration: none;
+}
+
 .top_section {
+	position: relative;
 	padding-top: 30px;
 }
 
@@ -18,10 +24,9 @@ body {
 }
 
 .top_section .home_logo:hover {
-
 	border: 3px solid white;
 	transform: scale(1.05);
-	 -webkit-transform: scale(1.05); 
+	-webkit-transform: scale(1.05); 
     -moz-transform: scale(1.05);
     -o-transform: scale(1.05);
 }
@@ -35,7 +40,6 @@ body {
 }
 
 .top_section .user_avatar:hover {
-	
 	border: 3px solid white;
 	transform: scale(1.05);
 	 -webkit-transform: scale(1.05); 
@@ -59,6 +63,8 @@ body {
 }
 
 .xbox_nav {
+	height: 40px;
+	position: absolute;
 	padding-left: 100px;
 	margin-top: 30px;
 }
@@ -73,10 +79,32 @@ body {
 
 .xbox_nav li:hover {
 	color: white;
+	font-size: 40px;
+	position: relative;
+}
+
+.left_page {
+	font-size: 40px;
+	color: white;
+	height: 500px;
+	background-color: orange;
+	margin-top: 80px;
+	position: absolute;
+}
+
+.right_page {
+	font-size: 40px;
+	float: right;
+	color: white;
+	height: 500px;
+	background-color: orange;
+	margin-top: 80px;
+	margin-right: 0px;
 }
 
 .home_wrapper {
-	margin-top: 40px;
+	margin-top: 80px;
+	position: absolute;
 }
 
 .home_wrapper .left_section {
@@ -137,14 +165,15 @@ body {
 
 .left_section .friends_on {
 	font-size: 20px;
-	margin-left: 0px
+	margin-left: 20px
 }
 
 .middle_section {
-	height: 300px;
+	height: 328px;
 	width: 700px;
 	margin-top: -500px;
 	margin-left: 300px;
+	z-index: 3;
 }
 
 .middle_section:hover {
@@ -158,9 +187,9 @@ body {
 
 
 .middle_section .home_image {
-	height: 300px;
+	height: 330px;
 	width: 700px;
-	z-index: 1;
+	z-index: 3;
 }
 
 
@@ -176,23 +205,27 @@ body {
 }
 .bottom_section {
 	margin-left: 300px;
-	width: 700px;
+	margin-top: -1px;
+	width: 705px;
 	height: 200px;
+	z-index: 2;
 }
 
 .bottom_section .logo {
 	height: 40px;
 	text-align: center;
+	position: absolute;
 }
 
 .bottom_tabs {
 	margin: 0;
-	width: 770px;
+
 }
 
-.bottom_tabs .blocks {
+.bottom_tabs .block1 {
 	display: inline-block;
-	height: 200px;
+
+	height: 173px;
 	width: 166px;
 	margin-top: 0;
 	margin-right: 5px;
@@ -200,8 +233,64 @@ body {
 	background-color: green;
 }
 
-.blocks:hover {	
+.bottom_tabs .block2 {
+	display: inline-block;
+	
+	height: 173px;
+	width: 166px;
+	margin-top: 0;
+	margin-right: 5px;
+	clear: both;
+	background-color: green;
+}
+.bottom_tabs .block3 {
+	display: inline-block;
+	height: 173px;
+	width: 166px;
+	margin-top: 0;
+	margin-right: 5px;
+	clear: both;
+	background-color: green;
+}
+.bottom_tabs .block4 {
+	display: inline-block;
+	height: 173px;
+	width: 166px;
+	margin-right: 5px;
+	clear: both;
+	background-color: green;
+}
+
+.block1:hover {	
 	border: 3px solid white;
+	position: relative;
+	transform: scale(1.05);
+	 -webkit-transform: scale(1.05); 
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
+}
+
+.block2:hover {	
+	border: 3px solid white;
+	position: relative;
+	transform: scale(1.05);
+	 -webkit-transform: scale(1.05); 
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
+}
+
+.block3:hover {	
+	border: 3px solid white;
+	position: relative;
+	transform: scale(1.05);
+	 -webkit-transform: scale(1.05); 
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
+}
+
+.block4:hover {	
+	border: 3px solid white;
+	position: relative;
 	transform: scale(1.05);
 	 -webkit-transform: scale(1.05); 
     -moz-transform: scale(1.05);
@@ -222,7 +311,7 @@ body {
 	color: white;
 	font-size: 20px;
 	margin-left: 1000px;
-	margin-top: -500px;
+	margin-top: -528px;
 	width: 200px;
 }
 
