--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,15 @@ body {
 	color: #222;
 }
 
-.xbox_nav a {
-	color:#E6E6E6;
-	text-decoration: none;
+nav {
+	height: 80px;
 }
 
+
+
 .top_section {
+	height: 49px;
+	width: 100%;
 	position: relative;
 	padding-top: 30px;
 }
@@ -21,6 +24,7 @@ body {
 	height: 40px;
 	width: 40px;
 	background-color: orange; 
+	z-index: 2;
 }
 
 .top_section .home_logo:hover {
@@ -33,9 +37,10 @@ body {
 
 
 .top_section .user_avatar {
-	margin: ;
+	margin: 0;
 	height: 40px;
 	width: 60px;
+	z-index: 1;
 	
 }
 
@@ -63,7 +68,7 @@ body {
 }
 
 .xbox_nav {
-	height: 40px;
+	height: 90px;
 	position: absolute;
 	padding-left: 100px;
 	margin-top: 30px;
@@ -77,7 +82,12 @@ body {
 	list-style: none;
 }
 
-.xbox_nav li:hover {
+.xbox_nav a {
+	color:#E6E6E6;
+	text-decoration: none;
+}
+
+.xbox_nav li a:hover {
 	color: white;
 	font-size: 40px;
 	position: relative;
@@ -103,8 +113,6 @@ body {
 }
 
 .home_wrapper {
-	margin-top: 80px;
-	position: absolute;
 }
 
 .home_wrapper .left_section {
@@ -218,7 +226,8 @@ body {
 }
 
 .bottom_tabs {
-	margin: 0;
+	margin-left: 300px;
+	box-sizing: border-box;   
 
 }
 
@@ -311,7 +320,7 @@ body {
 	color: white;
 	font-size: 20px;
 	margin-left: 1000px;
-	margin-top: -528px;
+	margin-top: -506px;
 	width: 200px;
 }
 
@@ -394,6 +403,12 @@ padding-top: 30px;
     -moz-transform: scale(2);
     -o-transform: scale(2);
     transform: scale(1.05);
+}
+
+@media (max-width: 300px) {
+	body {
+		
+	}
 }
 
 	
